<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView_pf3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/rapa_day"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/due_date_pf"
        app:layout_constraintEnd_toEndOf="@+id/due_date_pf"
        app:layout_constraintTop_toBottomOf="@+id/textView_cur_date"
        app:layout_constraintVertical_bias="0.338" />

    <TextView
        android:id="@+id/textView_pf2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/bill_day"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_acc_bill_date_pf"
        app:layout_constraintStart_toStartOf="@+id/textView_acc_bill_date_pf"
        app:layout_constraintTop_toBottomOf="@+id/textView_cur_date"
        app:layout_constraintVertical_bias="0.445" />

    <TextView
        android:id="@+id/textView_cur_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/free_day_zs"
        android:layout_width="30dp"
        android:layout_height="40dp"
         android:layout_marginStart="6dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="20"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView_acc_bill_date_zs"
        app:layout_constraintTop_toBottomOf="@+id/free_day_jh" />

    <EditText
        android:id="@+id/free_day_xy"
        android:layout_width="30dp"
        android:layout_height="40dp"
         android:layout_marginStart="6dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="20"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView_acc_bill_date_xy"
        app:layout_constraintTop_toBottomOf="@+id/free_day_gf" />

    <EditText
        android:id="@+id/free_day_jh"
        android:layout_width="30dp"
        android:layout_height="40dp"
         android:layout_marginStart="6dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="20"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView_acc_bill_date_jh"
        app:layout_constraintTop_toBottomOf="@+id/free_day_xy" />

    <EditText
        android:id="@+id/free_day_gf"
        android:layout_width="30dp"
        android:layout_height="40dp"
         android:layout_marginStart="6dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="20"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView_acc_bill_date_gf"
        app:layout_constraintTop_toBottomOf="@+id/free_day_pf" />

    <TextView
        android:id="@+id/due_date_gf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="60dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/free_day_gf"
        app:layout_constraintTop_toBottomOf="@+id/due_date_pf" />

    <TextView
        android:id="@+id/due_date_xy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="60dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/free_day_xy"
        app:layout_constraintTop_toBottomOf="@+id/due_date_gf" />

    <TextView
        android:id="@+id/due_date_zs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="60dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/free_day_zs"
        app:layout_constraintTop_toBottomOf="@+id/due_date_jh" />

    <TextView
        android:id="@+id/due_date_jh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="60dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/free_day_jh"
        app:layout_constraintTop_toBottomOf="@+id/due_date_xy" />

    <TextView
        android:id="@+id/due_date_pf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="172dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/free_day_pf"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_acc_bill_date_zs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="60dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView_zs"
        app:layout_constraintTop_toBottomOf="@+id/textView_acc_bill_date_jh" />

    <TextView
        android:id="@+id/textView_acc_bill_date_jh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="60dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView_jh"
        app:layout_constraintTop_toBottomOf="@+id/textView_acc_bill_date_xy" />

    <TextView
        android:id="@+id/textView_acc_bill_date_gf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="60dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView_gf"
        app:layout_constraintTop_toBottomOf="@+id/textView_acc_bill_date_pf" />

    <TextView
        android:id="@+id/textView_acc_bill_date_xy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="60dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView_xy"
        app:layout_constraintTop_toBottomOf="@+id/textView_acc_bill_date_gf" />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_pf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="168dp"
        android:text="@string/text_pf"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.016"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_gf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="60dp"
        android:text="@string/text_gf"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_pf" />

    <TextView
        android:id="@+id/textView_xy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="60dp"
        android:text="@string/text_xy"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_gf" />

    <TextView
        android:id="@+id/textView_jh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="60dp"
        android:text="@string/text_jh"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_xy" />

    <TextView
        android:id="@+id/textView_zs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="60dp"
        android:text="@string/text_zs"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_jh" />

    <TextView
        android:id="@+id/textView_acc_bill_date_pf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="172dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView_pf"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/free_day_pf"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="168dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="20"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView_acc_bill_date_pf"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>